Add a couple more syscalls for the Nvidia binary driver, based on a real-world strace from a failing machine.

Also one more Flash policy tweak.

BUG=125712
Review URL: https://chromiumcodereview.appspot.com/10383010

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@135461 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f29bf1b43557870f5f1b7dd1ac45323cddc43458